@@ -1,0 +1,232 @@
+# -*- coding: utf-8 -*-
+#This file is part of Tryton.  The COPYRIGHT file at the top level of')
+#this repository contains the full copyright notices and license terms.')
+TIME_LOCALE = \
+{'cs_CZ': {'%A': [u'Pond\u011bl\xed',
+                  u'\xdater\xfd',
+                  u'St\u0159eda',
+                  u'\u010ctvrtek',
+                  u'P\xe1tek',
+                  u'Sobota',
+                  u'Ned\u011ble'],
+           '%B': [None,
+                  u'leden',
+                  u'\xfanor',
+                  u'b\u0159ezen',
+                  u'duben',
+                  u'kv\u011bten',
+                  u'\u010derven',
+                  u'\u010dervenec',
+                  u'srpen',
+                  u'z\xe1\u0159\xed',
+                  u'\u0159\xedjen',
+                  u'listopad',
+                  u'prosinec'],
+           '%a': [u'Po', u'\xdat', u'St', u'\u010ct', u'P\xe1', u'So', u'Ne'],
+           '%b': [None,
+                  u'led',
+                  u'\xfano',
+                  u'b\u0159e',
+                  u'dub',
+                  u'kv\u011b',
+                  u'\u010den',
+                  u'\u010dec',
+                  u'srp',
+                  u'z\xe1\u0159',
+                  u'\u0159\xedj',
+                  u'lis',
+                  u'pro'],
+           '%p': [u'', u'']},
+ 'de_DE': {'%A': [u'Montag',
+                  u'Dienstag',
+                  u'Mittwoch',
+                  u'Donnerstag',
+                  u'Freitag',
+                  u'Samstag',
+                  u'Sonntag'],
+           '%B': [None,
+                  u'Januar',
+                  u'Februar',
+                  u'M\xe4rz',
+                  u'April',
+                  u'Mai',
+                  u'Juni',
+                  u'Juli',
+                  u'August',
+                  u'September',
+                  u'Oktober',
+                  u'November',
+                  u'Dezember'],
+           '%a': [u'Mo', u'Di', u'Mi', u'Do', u'Fr', u'Sa', u'So'],
+           '%b': [None,
+                  u'Jan',
+                  u'Feb',
+                  u'M\xe4r',
+                  u'Apr',
+                  u'Mai',
+                  u'Jun',
+                  u'Jul',
+                  u'Aug',
+                  u'Sep',
+                  u'Okt',
+                  u'Nov',
+                  u'Dez'],
+           '%p': [u'', u'']},
+ 'en_US': {'%A': [u'Monday',
+                  u'Tuesday',
+                  u'Wednesday',
+                  u'Thursday',
+                  u'Friday',
+                  u'Saturday',
+                  u'Sunday'],
+           '%B': [None,
+                  u'January',
+                  u'February',
+                  u'March',
+                  u'April',
+                  u'May',
+                  u'June',
+                  u'July',
+                  u'August',
+                  u'September',
+                  u'October',
+                  u'November',
+                  u'December'],
+           '%a': [u'Mon', u'Tue', u'Wed', u'Thu', u'Fri', u'Sat', u'Sun'],
+           '%b': [None,
+                  u'Jan',
+                  u'Feb',
+                  u'Mar',
+                  u'Apr',
+                  u'May',
+                  u'Jun',
+                  u'Jul',
+                  u'Aug',
+                  u'Sep',
+                  u'Oct',
+                  u'Nov',
+                  u'Dec'],
+           '%p': [u'AM', u'PM']},
+ 'es_CO': {'%A': [u'lunes',
+                  u'martes',
+                  u'mi\xe9rcoles',
+                  u'jueves',
+                  u'viernes',
+                  u's\xe1bado',
+                  u'domingo'],
+           '%B': [None,
+                  u'enero',
+                  u'febrero',
+                  u'marzo',
+                  u'abril',
+                  u'mayo',
+                  u'junio',
+                  u'julio',
+                  u'agosto',
+                  u'septiembre',
+                  u'octubre',
+                  u'noviembre',
+                  u'diciembre'],
+           '%a': [u'lun',
+                  u'mar',
+                  u'mi\xe9',
+                  u'jue',
+                  u'vie',
+                  u's\xe1b',
+                  u'dom'],
+           '%b': [None,
+                  u'ene',
+                  u'feb',
+                  u'mar',
+                  u'abr',
+                  u'may',
+                  u'jun',
+                  u'jul',
+                  u'ago',
+                  u'sep',
+                  u'oct',
+                  u'nov',
+                  u'dic'],
+           '%p': [u'', u'']},
+ 'es_ES': {'%A': [u'lunes',
+                  u'martes',
+                  u'mi\xe9rcoles',
+                  u'jueves',
+                  u'viernes',
+                  u's\xe1bado',
+                  u'domingo'],
+           '%B': [None,
+                  u'enero',
+                  u'febrero',
+                  u'marzo',
+                  u'abril',
+                  u'mayo',
+                  u'junio',
+                  u'julio',
+                  u'agosto',
+                  u'septiembre',
+                  u'octubre',
+                  u'noviembre',
+                  u'diciembre'],
+           '%a': [u'lun',
+                  u'mar',
+                  u'mi\xe9',
+                  u'jue',
+                  u'vie',
+                  u's\xe1b',
+                  u'dom'],
+           '%b': [None,
+                  u'ene',
+                  u'feb',
+                  u'mar',
+                  u'abr',
+                  u'may',
+                  u'jun',
+                  u'jul',
+                  u'ago',
+                  u'sep',
+                  u'oct',
+                  u'nov',
+                  u'dic'],
+           '%p': [u'', u'']},
+ 'fr_FR': {'%A': [u'lundi',
+                  u'mardi',
+                  u'mercredi',
+                  u'jeudi',
+                  u'vendredi',
+                  u'samedi',
+                  u'dimanche'],
+           '%B': [None,
+                  u'janvier',
+                  u'f\xe9vrier',
+                  u'mars',
+                  u'avril',
+                  u'mai',
+                  u'juin',
+                  u'juillet',
+                  u'ao\xfbt',
+                  u'septembre',
+                  u'octobre',
+                  u'novembre',
+                  u'd\xe9cembre'],
+           '%a': [u'lun.',
+                  u'mar.',
+                  u'mer.',
+                  u'jeu.',
+                  u'ven.',
+                  u'sam.',
+                  u'dim.'],
+           '%b': [None,
+                  u'janv.',
+                  u'f\xe9vr.',
+                  u'mars',
+                  u'avril',
+                  u'mai',
+                  u'juin',
+                  u'juil.',
+                  u'ao\xfbt',
+                  u'sept.',
+                  u'oct.',
+                  u'nov.',
+                  u'd\xe9c.'],
+           '%p': [u'', u'']}}
