@@ -1,3 +1,4 @@
+* Add strftime to ir.lang to handle locale's format
 * Add sqlite backend
 * Add validate test for required and size
 * Remove _sequence on ModelSQL
